@@ -7,6 +7,7 @@ Highlights
   into account standard constraints, SIMD width for vectorization as
   well as the number of compute units available on the device.
 - Support for NVIDIA GPUs via a new CUDA backend (currently experimental).
+- Removed support for BBVectorizer
 
 0.14 April 2017
 ===============
